<resources>
    <string name="app_name">ProjectQuiz</string>

    <!-- start_page.xml   -->
    <string name="welcome_to">Welcome To</string>
    <string name="web_developement">Web Development</string>
    <string name="quiz">Quiz</string>
    <string name="startLabel">START</string>
    <string name="ExitLabel">Exit</string>

    <string name="NextLabel">NEXT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_1">Question - 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="imageQuestion">Which of the following is Javascript Library: ExpressJs ?</string>


</resources>
